k8s/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thebookofjoel
  namespace: gotest
spec:
  selector:
    matchLabels:
      name: thebookofjoel-main
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        name: thebookofjoel-main
    spec:
      containers:
        - name: backend
          image: backend
          ports:
            - containerPort: 8000
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
