k8s/dev/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: gotest
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  tls:
    - secretName: gotest-thebookofjoel-com-tls
  rules:
  - host: gotest.thebookofjoel.com
    http:
      paths:
        - path: /api
          backend:
            serviceName: thebookofjoel-backend
            servicePort: 80
        - path: /
          backend:
            serviceName: thebookofjoel-nginx
            servicePort: 80
